# cyberdeck-wm

./: README.md  alacritty.yml  build  build.sh  cyberdeck-wm.cabal  default.nix  stack.yaml  xmobarrc  xmonad-pk.cabal  xmonad-pk.nix
app/: Main.hs
