name:                cyberdeck-wm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/inanna-malick/cyberdeck-wm
license:             BSD3
license-file:        LICENSE
author:              Inanna Malick
maintainer:          inanna@recursion.wtf
copyright:           2017 Inanna Malick
category:            CYBER
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable cyberdeck-wm
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , X11
                     , xmonad >= 0.13
                     , xmonad-contrib >= 0.13
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/inanna-malick/cyberdeck-wm
